# PicoWiFiManager

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
app/: main.cpp
include/: lwipopts.h  pico_wifi_manager.hpp  pico_wifi_manager_gui.hpp
include/pico_wifi_manager/: pico_wifi_manager.hpp
include/pico_wifi_manager_gui/: manager_view.hpp  network_info_view.hpp  scan_view.hpp
src/: pico_wifi_manager.cpp  pico_wifi_manager_gui.cpp
src/gui/: manager_view.cpp  network_info_view.cpp  scan_view.cpp
